--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 150px;
+    height: 120px;
     background-color: rgb(165, 165, 241);
 }
 
@@ -22,7 +22,7 @@ body {
 #btn-container {
     display: flex;
     justify-content: space-between;
-    margin-top: 50px;
+    margin-top: 20px;
     margin-left: 300px;
     margin-right: 300px;
 }
@@ -33,10 +33,30 @@ button {
     font-size: 30px;
 }
 
+#commentary {
+    display: flex;
+    justify-content: center;
+    font-size: 24px;
+}
+
 #results-container {
     margin-top: 20px;
-    margin-bottom: 50px;
-    height: 300px;
+    margin-bottom: 20px;
     display: flex;
-    border: 2px solid;
+    flex-direction: column;
+    justify-content: center;
 }
+
+#scores-container {
+    display: flex;
+    justify-content: center;
+}
+
+#player {
+    margin-right: 40px;
+}
+
+#computer {
+    margin-left: 40px;
+}
+
